--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/store": "^16.3.0",
     "google-libphonenumber": "^3.2.33",
     "postcode-validator": "^3.8.20",
     "rxjs": "~7.8.0",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^16.2.3",
     "@angular/cli": "~16.2.3",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/angular-jwt": "^0.0.33",
     "@types/google-libphonenumber": "^7.4.29",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
