--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "^16.2.0",
     "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
+    "chart.js": "^4.4.3",
     "google-libphonenumber": "^3.2.33",
+    "ng2-charts": "^6.0.1",
     "postcode-validator": "^3.8.20",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
