--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "chart.js": "^4.4.3",
     "google-libphonenumber": "^3.2.33",
+    "html2pdf.js": "^0.10.1",
     "ng2-charts": "^6.0.1",
     "postcode-validator": "^3.8.20",
     "rxjs": "~7.8.0",
@@ -35,6 +39,7 @@
     "@angular-devkit/build-angular": "^16.2.3",
     "@angular/cli": "~16.2.3",
     "@angular/compiler-cli": "^16.2.0",
+    "@angular/localize": "^16.2.0",
     "@types/angular-jwt": "^0.0.33",
     "@types/google-libphonenumber": "^7.4.29",
     "@types/jasmine": "~4.3.0",
