--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.3",
+    "file-saver": "^2.0.5",
     "google-libphonenumber": "^3.2.33",
     "html2pdf.js": "^0.10.1",
     "ng2-charts": "^6.0.1",
+    "ngx-mask": "^17.0.8",
     "postcode-validator": "^3.8.20",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -41,6 +43,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.0",
     "@types/angular-jwt": "^0.0.33",
+    "@types/file-saver": "^2.0.7",
     "@types/google-libphonenumber": "^7.4.29",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
@@ -49,6 +52,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "3.3.0",
     "typescript": "~5.1.3"
   }
 }
