--- a/angular.json
+++ b/angular.json
@@ -62,10 +62,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "CRM:build:production"
+              "buildTarget": "CRM:build:production"
             },
             "development": {
-              "browserTarget": "CRM:build:development"
+              "buildTarget": "CRM:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -73,7 +73,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "CRM:build"
+            "buildTarget": "CRM:build"
           }
         },
         "test": {
