--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "@angular/platform-browser-dynamic": "^18.0.2",
     "@angular/router": "^18.0.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
-    "@ngrx/effects": "^16.3.0",
-    "@ngrx/store": "^16.3.0",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.3",
     "file-saver": "^2.0.5",
     "google-libphonenumber": "^3.2.33",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "ng2-charts": "^6.0.1",
     "ngx-mask": "^17.0.8",
+    "pdfmake": "^0.2.10",
     "postcode-validator": "^3.8.20",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
